<resources>
    <string name="app_name">zombie game</string>

    //DEFINIMOS LAS VARIABLES DEL MAIN_ACTIVITY
    <string name="BTNLOGIN">LOGIN</string>
    <string name="BTNREGISTRO">REGISTRO</string>

    //DEFINIMOS LAS VARIABLES DE REGISTRO
    <string name="correoEt">Correo Electronico</string>
    <string name="passEt">Contraseña</string>
    <string name="nombreEt">Nombre</string>
    <string name="edadEt">Edad</string>
    <string name="paisEt">Pais</string>
    <string name="fechaTxt">Fecha</string>
    <string name="Registrar">REGISTRAR</string>

    //DEFINIMOS LAS VARIABLES DE LOGIN
    <string name="correoLogin">Correo Electronico</string>
    <string name="passLogin">Contraseña</string>
    <string name="BtnLogin">INICIAR SESION</string>

    //DEFINIMOS LAS VARIABLES DE MENU
    <string name="MiPerfiltxt">Mi Perfil</string>
    <string name="MiPuntuaciontxt">Mi Puntuacion</string>
    <string name="Zombies"> -- </string>
    <string name="uid"> -- </string>
    <string name="correo"> -- </string>
    <string name="nombre"> -- </string>
    <string name="edad"> -- </string>
    <string name="pais"> -- </string>
    <string name="fecha"> -- </string>

    <string name="Menutxt">Menu</string>

    <string name="JugarBtn">Jugar</string>
    <string name="EditarBtn">Editar</string>
    <string name="CambiarPassBtn">Cambiar Contraseña</string>
    <string name="PuntuacionesBtn">Puntuaciones</string>
    <string name="AcercaDeBtn">Acerca de</string>
    <string name="cerrarSesionBtn">Cerrar Sesion</string>

    //DEFINIMOS VARIABLES DEL ESCENARIO
    <string name="TvContador">0</string>
    <string name="TvNombre"> ----- </string>
    <string name="TvTiempo">0 s</string>


    //DEFINIMOS VARIABLES DEL TAMAÑO DE LA PANTALLA

    <string name="AnchoTv">-</string>
    <string name="AltoTv">-</string>

    <string name="SeacaboTXT">!Se acabó el tiempo¡</string>
    <string name="HasmatadoTXT">Has Matado</string>
    <string name="NumeroTXT"> -- </string>
    <string name="JUGARDENUEVO">JUGAR DE NUEVO</string>
    <string name="IRMENU">MENÚ</string>
    <string name="PUNTAJES">VER PUNTAJES</string>


    //DATOS DEL JUGADOR EN LA LISTA

    <string name="NombreJugador">Nombre</string>
    <string name="CorreoJugador">Correo</string>
    <string name="PuntajeJugador">Puntaje</string>
    <string name="EdadJugador">Edad</string>
    <string name="PaisJugador">País</string>

    //DETALLE DEL JUGADOR

    <string name="INFORMACIONDETALLE">INFORMACION DEL JUGADOR</string>
    <string name="NombresDetalle">Nombres</string>
    <string name="CorreoDetalle">Correo</string>
    <string name="PuntajeDetalle">Puntaje</string>
    <string name="EdadDetalle">Edad</string>
    <string name="PaisDetalle">País</string>

    <string name="ActualPass">Actual contraseña</string>
    <string name="NuevoPass">Nueva contraseña</string>
    <string name="CambiarPass">Cambiar contraseña</string>


    <!--ACERCA DE-->
    <string name="ProfesorPOTXT">Profesor:</string>
    <string name="ProfTXT">CHARLES CAMASCA MACEDO</string>
    <string name="IntegrantesPOTXT">Integrantes:</string>
    <string name="DevTXT1">BRANDON CAMPOS TORRES</string>
    <string name="DevTXT2">AUGUSTO BARRIENTOS MEJIA</string>
    <string name="DevTXT3">ALVARO SANTA CRUZ VILLAR</string>
    <string name="DevTXT4">ELIAS CHAPOÑAN CASTRO</string>
    <string name="DevTXT5">PIERO TAVARA CHACALIAZA</string>
    <string name="OK">OK</string>

</resources>