<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_with_overlay"
    tools:context=".Menu">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textColor="#FFFFFF"

        android:textColorHint="#FFFFFF"
        android:padding="20dp"
        android:gravity="center">

       <!-- DATOS DEL PERFIL DEL JUGADOR -->
       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
          <TextView
              android:id="@+id/MiPerfiltxt"
              android:text="@string/MiPerfiltxt"
              android:gravity="center"
              android:textSize="20sp"
              android:textColor="#FFFFFF"
              android:layout_width="match_parent"
              android:layout_height="match_parent"/>

           <!-- IMAGEN PERFIL -->
           <de.hdodenhof.circleimageview.CircleImageView
               android:id="@+id/imagenPerfil"
               android:src="@drawable/soldado"
               android:layout_marginTop="5dp"
               android:layout_gravity="center"
               android:layout_width="100dp"
               android:layout_height="100dp"/>

          <!-- UID -->
          <TextView
              android:id="@+id/uid"
              android:text="@string/uid"
              android:gravity="center"
              android:textColor="#FFFFFF"
              android:textColorHint="#FFFFFF"
              android:layout_marginTop="10dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />

          <!-- CORREO -->
          <TextView
              android:id="@+id/correo"
              android:text="@string/correo"
              android:gravity="center"
              android:textColor="#FFFFFF"
              android:textColorHint="#FFFFFF"
              android:layout_marginTop="10dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />

          <!-- NOMBRE DE USUARIO -->
          <TextView
              android:id="@+id/nombre"
              android:text="@string/nombre"
              android:gravity="center"
              android:textColor="#FFFFFF"
              android:textColorHint="#FFFFFF"
              android:layout_marginTop="10dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />

          <!-- EDAD DE USUARIO -->
          <TextView
              android:id="@+id/edad"
              android:text="@string/edad"
              android:gravity="center"
              android:textColor="#FFFFFF"
              android:textColorHint="#FFFFFF"
              android:layout_marginTop="10dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />

          <!-- PAIS DE USUARIO -->
          <TextView
              android:id="@+id/pais"
              android:text="@string/pais"
              android:gravity="center"
              android:textColor="#FFFFFF"
              android:textColorHint="#FFFFFF"
              android:layout_marginTop="10dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />

          <!-- FECHA DE REGISTRO -->
          <TextView
              android:id="@+id/fecha"
              android:text="@string/fecha"
              android:gravity="center"
              android:textColor="#FFFFFF"
              android:textColorHint="#FFFFFF"
              android:layout_marginTop="10dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />
       </androidx.appcompat.widget.LinearLayoutCompat>


       <!-- PUNTUACION -->
        <TextView
            android:id="@+id/MiPuntuaciontxt"
            android:text="@string/MiPuntuaciontxt"
            android:textSize="25sp"
            android:textColor="#0489b1"
            android:textColorHint="#0489b1"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

   <androidx.appcompat.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="horizontal">

       <!-- ZOMBIE GIF -->
       <pl.droidsonroids.gif.GifImageView
           android:layout_width="80dp"
           android:layout_height="80dp"
           android:src="@drawable/zombi2"
           />
       <!-- ZOMBIES MATADOS - PUNTUACION -->
       <TextView
           android:id="@+id/Zombies"
           android:text="@string/Zombies"
           android:textSize="35sp"
           android:gravity="center"
           android:textColor="#04b45f"
           android:textColorHint="#04b45f"
           android:textStyle="bold"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />

   </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- TXT -->
        <TextView
            android:id="@+id/Menutxt"
            android:text="@string/Menutxt"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- BOTON JUGAR -->
        <Button
            android:id="@+id/JugarBtn"
            android:text="@string/JugarBtn"
            android:background="@drawable/rounded_button"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <!-- BOTON EDITAR -->
        <Button
            android:id="@+id/EditarBtn"
            android:text="@string/EditarBtn"
            android:background="@drawable/rounded_button"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <!-- BOTON CAMBIAR PASS -->
        <Button
            android:id="@+id/CambiarPassBtn"
            android:text="@string/CambiarPassBtn"
            android:background="@drawable/rounded_button"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <!-- BOTON PUNTUACIONES -->
        <Button
            android:id="@+id/PuntuacionesBtn"
            android:text="@string/PuntuacionesBtn"
            android:background="@drawable/rounded_button"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <!-- BOTON ACERCA DE -->
        <Button
            android:id="@+id/AcercaDeBtn"
            android:text="@string/AcercaDeBtn"
            android:background="@drawable/rounded_button"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <!-- BOTON CERRAR SESION -->
        <Button
            android:id="@+id/cerrarSesionBtn"
            android:text="@string/cerrarSesionBtn"
            android:background="@drawable/rounded_button"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <!-- IMAGEN ZOMBIE -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imagen"
            android:src="@drawable/logogame"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:layout_width="150dp"
            android:layout_height="150dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>