<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff"
    tools:context=".DetalleJugador">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/ImagenDetalle"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/INFORMACIONDETALLE"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/INFORMACIONDETALLE"
            android:textColor="#088a4b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/NombresDetalle"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/NombresDetalle"
            android:textColor="#0489B1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/PuntajeDetalle"
            android:text="@string/PuntajeDetalle"
            android:textColor="#FF8000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            android:id="@+id/CorreoDetalle"
            android:text="@string/CorreoDetalle"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            android:id="@+id/EdadDetalle"
            android:text="@string/EdadDetalle"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            android:id="@+id/PaisDetalle"
            android:text="@string/PaisDetalle"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="100dp"
            android:layout_height="180dp"
            android:src="@drawable/dancing_zombie"
            android:layout_gravity="center"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>