<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Registro">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <!-- CORREO -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/correoEt"
                android:hint="@string/correoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />
            
        </com.google.android.material.textfield.TextInputLayout>

        <!-- CONTRASEÑA -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passEt"
                android:hint="@string/passEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- NOMBRE -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nombreEt"
                android:hint="@string/nombreEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- FECHA ACTUAL -->
        <TextView
            android:id="@+id/fechaTxt"
            android:text="@string/fechaTxt"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- BOTON DE REGISTRAR -->
        <Button
            android:id="@+id/Registrar"
            android:text="@string/Registrar"
            android:layout_marginTop="10dp"
            android:background="@drawable/boton_personalizado"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>