<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_with_overlay"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">
        <!-- IMAGEN DEL LOGO-->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="180dp"
            app:srcCompat="@drawable/logogame"
            android:contentDescription="@string/app_name"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:textColorHint="#FFFFFF"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/ActualPass"
                android:hint="@string/ActualPass"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:textColorHint="#FFFFFF"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/NuevoPass"
                android:hint="@string/NuevoPass"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- BOTON DE INGRESAR -->

        <Button
            android:id="@+id/CambiarPass"
            android:text="@string/CambiarPass"
            android:background="@drawable/rounded_button"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>